# pal

./: CMakeLists.txt  readme.md
src/: cserial.cpp  cserial.h  menu.c  pal.cpp
src/include/pal/: menu.h  menuTests.h  pal.h
